# tutorials

./: .gitignore  .lfsconfig  .markdown-link-check-config.json  .markdown-lint-check-config.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  all.msh  clean-all.sh  config.yml  euler_config_coupled.cfg  fix1.nam  fix2.nam  fix3.nam  flap.inp  fluidMesh.su2  interface.nam  plotDisplacement.sh  precice-config.xml  runTutorial.sh  su2-config.cfg  testfile  testfile.out
.binder/: apt.txt  environment.yml
.github/: pull_request_template.md
1D-3D-partitioned-pipe/: Allclean  README.md  precice-config.xml  runFluid2
CalculixMesh/: all.msh
Structure/: README.md  TODO.md  precice-adapter-config-D.json  precice-adapter-config-N.json  precice-config.xml  structure2D.py  structure_baseline.py
aste-turbine/: .gitignore  README.md  clean.sh  precice-config.xml  precice.xml  run.sh
aste-turbine-tutorial/: README.md  precice.xml  run.sh
breaking-dam-2d/: README.md  precice-config.xml
breaking-dam-3d/: README.md  precice-config.xml
changelog-entries/: 223.md  225.md  232.md  234.md  318.md  321.md  331.md  480.md  500.md  544.md  545.md  551.md  554.md  557.md
channel-transport/: README.md  elixir_euler_channel_freestream.jl  precice-config.xml
channel-transport-OF/: precice-config.xml
channel-transport-reaction/: README.md  clean-tutorial.sh  plot.py  precice-config.xml
chemical-reactions/: precice-config.xml
dam_wall_1d/: README.md  precice-config.xml
dam_wall_3d/: precice-config.xml
elastic-tube-1d/: .gitignore  README.md  clean.sh  metadata.yaml  plot-all.sh  plot-diameter.sh  plot-vtk.py  precice-config.xml  reference_results.metadata  run-all.sh  tutorial.yaml
elastic-tube-1d/fluid-cpp/: CMakeLists.txt  FluidComputeSolution.cpp  FluidComputeSolution.h  FluidSolver.cpp  clean.sh  precice-Fluid-events.json  run.sh  utilities.cpp  utilities.h
elastic-tube-1d/fluid-cpp/src/: FluidComputeSolution.cpp  FluidComputeSolution.h  FluidSolver.cpp  utilities.cpp  utilities.h
elastic-tube-1d/solid-cpp/: CMakeLists.txt  SolidSolver.cpp  SolidSolver.h  clean.sh  precice-Solid-events.json  run.sh
elastic-tube-1d/solid-cpp/src/: SolidComputeSolution.cpp  SolidSolver.cpp  SolidSolver.h
elastic-tube-3d/: README.md  clean.sh  metadata.yaml  plot-all-displacements.sh  plot-displacements.sh  precice-config.xml  tutorial.yaml
flow-around-controlled-moving-cylinder/: .gitignore  README.md  clean-tutorial.sh  plot-timeseries.py  plot-watchpoint.sh  precice-config.xml
flow-over-heated-plate-calculix/: README.md  precice-config.xml
flow-over-heated-plate-ff/: README.md  precice-config.xml
flow-over-heated-plate-nearest-projection/: README.md  clean.sh  precice-config.xml
flow-over-plate/: README.md
opendihu-febio-muscle-simulation/bfp_plugin/: CMakeLists.txt  PreciceCallback.cpp
quickstart/solid-cpp/: .gitignore  CMakeLists.txt  clean.sh  rigid_body_solver.cpp  run.sh
two-scale-heat-conduction/: .gitignore  CMakeLists.txt  README.md  clean-tutorial.sh  compile-dumux-cases.sh  micro-manager-config.json  precice-config-dumux.xml  precice-config-full-sim.xml  precice-config-with-adaptivity.xml  precice-config.xml  setup-dumux.sh  submit-job.sh
two-scale-heat-conduction/dumux-dumux/: CMakeLists.txt  README.md  precice-config-full-sim.xml  precice-config-with-adaptivity.xml
two-scale-heat-conduction/dumux-dumux/macro-heat/: main.cc  myenergyvolumevariables.hh  mysimpleliquid.hh  myvolumevariables.hh  problem.hh  properties.hh  spatialparams.hh
two-scale-heat-conduction/dumux-dumux/micro-heat/: CMakeCache.txt  micro_sim.cpp  properties_allencahn.hh
two-scale-heat-conduction/dumux/macro-dumux/: dune.module
two-scale-heat-conduction/dumux/macro-dumux/appl/: clean-example.sh  main.cc
two-scale-heat-conduction/dune-wrapper/: CMakeLists.txt  cmake.opts  install_macro-dumux.py
two-scale-heat-conduction/images/: tutorials-two-scale-heat-conduction-precice-config.dot
two-scale-heat-conduction/macro-dumux/: CMakeCache.txt  CMakeLists.txt  dune.module  main.cc  params.input  problem.hh  run.sh  spatialparams.hh
two-scale-heat-conduction/macro-dumux/appl/: CMakeLists.txt  main.cc  myenergyvolumevariables.hh  mysimpleliquid.hh  myvolumevariables.hh  problem.hh  properties.hh  spatialparams.hh
two-scale-heat-conduction/macro-dumux/cmake/modules/: MacroDumuxMacros.cmake
two-scale-heat-conduction/macro-dumux/doc/: CMakeLists.txt
two-scale-heat-conduction/macro-dumux/doc/doxygen/: CMakeLists.txt  Doxylocal
two-scale-heat-conduction/macro-dumux/macro-dumux/: config.h.cmake  macro-dumux.pc.in
two-scale-heat-conduction/macro-dumux/macro-dumux/cmake/modules/: CMakeLists.txt
two-scale-heat-conduction/macro-dumux/src/: main.cc  myenergyvolumevariables.hh  spatialparams.hh
two-scale-heat-conduction/macro-nutils/: clean-macro-nutils.sh  macro.py  macro_nutils.py  requirements.txt  run.sh
two-scale-heat-conduction/micro-dumux/: CMakeLists.txt  clean-example.sh  clean.sh  config.h.cmake  dune.module  micro-manager-config.json  micro_sim.cpp  micro_sim.pc.in  params.input  problem_allencahn.hh  problem_cellproblem.hh  properties_cellproblem.hh  run.sh  run_micro_manager.py  spatialparams_cellproblem.hh
two-scale-heat-conduction/micro-dumux/appl/: CMakeLists.txt  clean-example.sh  micro-manager-config.json  micro_sim.cpp  params.input  problem_allencahn.hh  problem_cellproblem.hh  properties_allencahn.hh  properties_cellproblem.hh  spatialparams_cellproblem.hh
two-scale-heat-conduction/micro-dumux/appl/cell_problem/: localresidual.hh  model.hh  volumevariables.hh
two-scale-heat-conduction/micro-dumux/cell_problem/: indices.hh  localresidual.hh  model.hh  volumevariables.hh
two-scale-heat-conduction/micro-dumux/src/: micro_sim.cpp  problem_cellproblem.hh  properties_allencahn.hh
two-scale-heat-conduction/micro-dumux/src/cell_problem/: localresidual.hh
two-scale-heat-conduction/micro-nutils/: clean-micro-nutils.sh  micro-manager-config.json  micro.py  micro_heat.py  requirements.txt  run-micro-problems.py  run.sh
(+25777 files in other folders)
