CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
SET(TARGET "rigid_body_solver")
PROJECT(${TARGET} LANGUAGES CXX DESCRIPTION "rigid_body_solver")

# The rigid body solver requires c++14
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(precice REQUIRED CONFIG)
ADD_EXECUTABLE(
        ${TARGET}
        ${TARGET}.cpp)

TARGET_LINK_LIBRARIES(${TARGET} PRIVATE precice::precice)
